Atualizado layout dos NPCs e adição de dados de inventário